kafka/kafka-ui-vs.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kafkaui-vs
  namespace: kafka
spec:
  gateways:
  - istio-system/ezaf-gateway
  hosts:
  - kafkaui.truepoc.ezapac.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kafka-ui.kafka.svc.cluster.local
        port:
